ingress/skate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skate-deploy  
spec:
  replicas: 2
  minReadySeconds: 5
  selector:
    matchLabels:
      app: skate
  template:
    metadata:
      labels:
        app: skate
    spec:
      containers:  
        - name: skate
          image: shaikkhajaibrahim/skateboard:1.0
          resources:
            requests: 
              memory: "64Mi"  
              cpu: "100m"
            limits:
              memory: "128Mi"  
              cpu: "500m"  
          ports:
            - containerPort: 80  

---
apiVersion: v1
kind: Service
metadata: 
  name: skate-svc
spec:
  type: ClusterIP  
  selector:
    app: skate
  ports:
    - port: 80
      targetPort: 80
